# zkVMs-bachelor-thesis

./: README.md
graphs/: README.md  complet_to_csv_.py  scraper.py  split_to_parts.py
graphs/example/: log-risc0.txt  log-sp1.txt
risc0bench/: README.md
risc0bench/host/: Cargo.toml
risc0bench/host/src/: main.rs  parse_args.rs
risc0bench/methods/guest/: Cargo.toml
risc0bench/methods/guest/src/: fibonacci.rs  main.rs  poseidon.rs  poseidon_risc0.rs  sha256.rs
sp1bench/: README.md
sp1bench/contracts/src/fixtures/: groth16-fixture.json  plonk-fixture.json
sp1bench/lib/: Cargo.toml
sp1bench/lib/src/: lib.rs
sp1bench/program/: Cargo.toml
sp1bench/program/src/: fibonacci.rs  main.rs  poseidon.rs  sha256.rs  sha256_evm.rs
sp1bench/script/: Cargo.toml
sp1bench/utils/: Cargo.toml
sp1bench/utils/src/: lib.rs
