[package]
version = "0.1.0"
name = "sha256-script"
edition = "2021"
default-run = "sha256"

[[bin]]
name = "sha256"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[dependencies]
sp1-sdk = "4.2.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
hex = "0.4.3"
alloy-sol-types = { workspace = true }
utils = { path = "../utils" }
sha256-lib = { path = "../lib" }
dotenv = "0.15.0"

[build-dependencies]
sp1-build = "4.2.0"
